--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
                     <button type="button" class="button-function" id="_x" >x</button>
                 </div>
                 <div class="number-sub">
-                    <button type="button" class="button-number" id="clear" style="width:100%">C</button>                    
+                    <button type="button" class="button-number" id="_-" style="width:40.5%">-</button>                    
+                    <button type="button" class="button-number" id="clear" style="width:40.5%">C</button>                    
                 </div>
             </div>
         </div>
